data/issues_nolabel/nolabel_test_4133.txt
Compile error: invalid use of incomplete type 'class perftools::gputools::StreamExecutor' in stream_executor/kernel.h

Issue
Building tensorflow from source using gcc 7.0.0 results in the below compile error.
The error is clearly enough because the structure of class StreamExecutor is not known from kernel.h.
$ bazel build --verbose_failures -c opt //tensorflow/tools/pip_package:build_pip_package
...
ERROR: /opt/tensorflow-r0.10/tensorflow/stream_executor/BUILD:5:1: C++ compilation of rule '//tensorflow/stream_executor:stream_executor' failed: gcc failed: error executing command 
  (cd /home/foreese/.cache/bazel/_bazel_foreese/2c35d3fa162a38720aa5307b2053cde8/execroot/tensorflow-r0.10 && \
  exec env - \
    LD_LIBRARY_PATH=/opt/gcc-dev/lib64:/opt/gcc-dev/lib:/opt/support/lib:/opt/support/lib32:/opt/gdb-7.7.1/lib \
    PATH=/opt/gcc-dev/bin:/opt/gcc-dev/libexec/gcc/x86_64-pc-linux-gnu/7.0.0:/home/foreese/bin:/home/foreese/.local/bin:/opt/python-3.5/bin:/opt/support/bin:/usr/local/bin:/usr/bin:/bin: \
  /opt/gcc-dev/bin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wl,-z,-relro,-z,now -B/opt/gcc-dev/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-canonical-system-headers -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections '-std=c++0x' -MD -MF bazel-out/local-py3-opt/bin/tensorflow/stream_executor/_objs/stream_executor/tensorflow/stream_executor/machine_manager.pic.d '-frandom-seed=bazel-out/local-py3-opt/bin/tensorflow/stream_executor/_objs/stream_executor/tensorflow/stream_executor/machine_manager.pic.o' -fPIC -DHAVE_CONFIG_H -iquote . -iquote bazel-out/local-py3-opt/genfiles -iquote external/protobuf -iquote bazel-out/local-py3-opt/genfiles/external/protobuf -iquote external/bazel_tools -iquote bazel-out/local-py3-opt/genfiles/external/bazel_tools -iquote external/farmhash_archive -iquote bazel-out/local-py3-opt/genfiles/external/farmhash_archive -iquote external/gif_archive -iquote bazel-out/local-py3-opt/genfiles/external/gif_archive -iquote external/highwayhash -iquote bazel-out/local-py3-opt/genfiles/external/highwayhash -iquote external/jpeg_archive -iquote bazel-out/local-py3-opt/genfiles/external/jpeg_archive -iquote external/png_archive -iquote bazel-out/local-py3-opt/genfiles/external/png_archive -iquote external/re2 -iquote bazel-out/local-py3-opt/genfiles/external/re2 -iquote external/eigen_archive -iquote bazel-out/local-py3-opt/genfiles/external/eigen_archive -iquote external/zlib_archive -iquote bazel-out/local-py3-opt/genfiles/external/zlib_archive -iquote external/local_config_cuda -iquote bazel-out/local-py3-opt/genfiles/external/local_config_cuda -isystem external/protobuf/src -isystem bazel-out/local-py3-opt/genfiles/external/protobuf/src -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem bazel-out/local-py3-opt/genfiles/external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem external/gif_archive/giflib-5.1.4/lib -isystem bazel-out/local-py3-opt/genfiles/external/gif_archive/giflib-5.1.4/lib -isystem external/highwayhash -isystem bazel-out/local-py3-opt/genfiles/external/highwayhash -isystem external/jpeg_archive/jpeg-9a -isystem bazel-out/local-py3-opt/genfiles/external/jpeg_archive/jpeg-9a -isystem external/png_archive/libpng-1.2.53 -isystem bazel-out/local-py3-opt/genfiles/external/png_archive/libpng-1.2.53 -isystem external/re2 -isystem bazel-out/local-py3-opt/genfiles/external/re2 -isystem external/eigen_archive -isystem bazel-out/local-py3-opt/genfiles/external/eigen_archive -isystem external/zlib_archive/zlib-1.2.8 -isystem bazel-out/local-py3-opt/genfiles/external/zlib_archive/zlib-1.2.8 -isystem external/local_config_cuda/cuda -isystem bazel-out/local-py3-opt/genfiles/external/local_config_cuda/cuda -isystem external/local_config_cuda/cuda/include -isystem bazel-out/local-py3-opt/genfiles/external/local_config_cuda/cuda/include -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE__="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' -c tensorflow/stream_executor/machine_manager.cc -o bazel-out/local-py3-opt/bin/tensorflow/stream_executor/_objs/stream_executor/tensorflow/stream_executor/machine_manager.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from ./tensorflow/stream_executor/stream.h:33:0,
                 from ./tensorflow/stream_executor/machine_manager.h:51,
                 from tensorflow/stream_executor/machine_manager.cc:16:
./tensorflow/stream_executor/kernel.h: In member function 'void perftools::gputools::TypedKernel<Params>::PackOneParam(std::vector<perftools::gputools::KernelArg>*, const T&, typename std::enable_if<perftools::gputools::IsDeviceMemoryValueLike<T>::value>::type*) const':
./tensorflow/stream_executor/kernel.h:358:32: error: invalid use of incomplete type 'class perftools::gputools::StreamExecutor'
     args->emplace_back(parent()->DeviceMemoryToKernelArg(arg));
                                ^~
In file included from ./tensorflow/stream_executor/stream.h:29:0,
                 from ./tensorflow/stream_executor/machine_manager.h:51,
                 from tensorflow/stream_executor/machine_manager.cc:16:
./tensorflow/stream_executor/device_memory.h:35:7: note: forward declaration of 'class perftools::gputools::StreamExecutor'
 class StreamExecutor;
       ^~~~~~~~~~~~~~
In file included from ./tensorflow/stream_executor/stream.h:33:0,
                 from ./tensorflow/stream_executor/machine_manager.h:51,
                 from tensorflow/stream_executor/machine_manager.cc:16:
./tensorflow/stream_executor/kernel.h: In member function 'void perftools::gputools::TypedKernel<Params>::PackOneParam(std::vector<perftools::gputools::KernelArg>*, T, typename std::enable_if<perftools::gputools::IsDeviceMemoryPointer<T>::value>::type*) const':
./tensorflow/stream_executor/kernel.h:368:32: error: invalid use of incomplete type 'class perftools::gputools::StreamExecutor'
     args->emplace_back(parent()->DeviceMemoryToKernelArg(*ptr));
                                ^~
In file included from ./tensorflow/stream_executor/stream.h:29:0,
                 from ./tensorflow/stream_executor/machine_manager.h:51,
                 from tensorflow/stream_executor/machine_manager.cc:16:
./tensorflow/stream_executor/device_memory.h:35:7: note: forward declaration of 'class perftools::gputools::StreamExecutor'
 class StreamExecutor;
       ^~~~~~~~~~~~~~
Target //tensorflow/tools/pip_package:build_pip_package failed to build

System details

OS: CentOS 6.8 x86_64-redhat-linux using
Compiler:  gcc 7.0.0 (I do this because my system gcc is 4.4.7 which is too old to build bazel properly with -std=c++11)
CUDA/cuDNN: None
tensorflow: branch r0.10 6ce5b5c
bazel:

Build label: 0.3.1-2016-08-31 (@1b2071f)
Build target: bazel-out/local-fastbuild/bin/src/main/java/com/google/devtools/build/lib/bazel/BazelServer_deploy.jar
Build time: Wed Aug 31 16:52:51 2016 (1472662371)
Build timestamp: 1472662371
Build timestamp as int: 1472662371